# recondo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.mcp  LICENSE  NOTICE  README.md  SECURITY.md  adversarial-workflow.md  dashboard-mock.html  docker-compose.dev.yml  docker-compose.fullstack.yml  docker-compose.sprint4.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  gateway-ci.yml
api/: codegen.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
api/migrations/: 001_core-tables.sql  002_api-tables.sql  003_triggers-indexes.sql  004_compliance.sql  005_reports-policies-keys.sql  006_runtime-tables.sql  007_fix-anomaly-events.sql  008_turns-cache-defaults.sql  009_heartbeats-id-default.sql  010_materialized-views.sql  011_attachments.sql  012_turns-request-hash-index.sql  013_mcp-audit-log.sql  014_compliance-framework-aliases.sql  015_compliance-frameworks-short-ids.sql  016_audit-log-outcome.sql  017_api-keys-scoped.sql
api/src/: attestation.ts  audit.ts  auth.ts  context.ts  db.ts  index.ts  loaders.ts  monitoring.ts  placeholder-mask.ts  ratelimit.ts  resolvers.ts  schema.graphql  schema.ts
api/tests/: abort-on-disconnect.test.ts  anomaly-detection.test.ts  anomaly-resolution.test.ts  attachments-route.test.ts  attestation.test.ts  audit.test.ts  auth.test.ts  (+42 more)
compliance/: gap_analysis.md  model-pricing.toml  provider_compatibility.md
dashboard/: index.html  package-lock.json  package.json  vitest.config.ts
docs/: CLOUD_ARCHITECTURE.md  LOCAL_AWS_DEV.md  MIGRATIONS.md  PROVIDER_IDENTITY_MAPPING.md  Recondo_MITM_and_CA_Strategy.md  how-llms-work.md
examples/: README.md  claude-code.sh  codex.sh  gemini.sh
gateway/: Cargo.toml
gateway/.config/: nextest.toml
gateway/src/: lib.rs  main.rs
gateway/src/alerts/: mod.rs
gateway/src/artifacts/: mod.rs
gateway/src/capture/: attachments.rs  mod.rs  recovery.rs
gateway/src/config/: mod.rs
gateway/src/db/: mod.rs  model_pricing.rs
gateway/src/drift/: mod.rs
gateway/src/gateway/: capture_pipeline.rs  connect.rs  crypto.rs  intercept.rs  mod.rs  run_listener.rs  trace.rs
gateway/src/hash/: mod.rs
gateway/src/health/: mod.rs
gateway/src/metrics/: mod.rs
gateway/src/operator/: mod.rs  runtime.rs  upgrade.rs
gateway/src/providers/: anthropic.rs  codex.rs  generic.rs  google.rs  mock.rs  mod.rs  openai.rs  parse_drift.rs
gateway/src/schema/: mod.rs
gateway/src/session/: mod.rs
gateway/src/status/: mod.rs
gateway/src/storage/: graph.rs  mod.rs  object.rs  pipeline.rs  pool.rs  postgres.rs
gateway/src/store/: mod.rs
gateway/src/stream/: mod.rs
gateway/src/tls/: mod.rs  trust_store.rs
gateway/src/wal/: mod.rs
gateway/src/websocket/: mod.rs
gateway/tests/: anthropic_request_tests.rs  anthropic_response_tests.rs  attachment_extraction_tests.rs  attachment_scoping_tests.rs  batch10_e6_tests.rs  batch11_silent_dup_loss_tests.rs  batch12_codex_attachment_tests.rs  batch1_h1_m2_tests.rs  batch2_e1_tests.rs  batch3_e2_e3_tests.rs  batch4_m1_e7_tests.rs  batch5_h4_tests.rs  batch6_h2_m3_tests.rs  batch7_e4_e5_tests.rs  batch8_m4_tests.rs  batch9_e8_tests.rs  capture_integration_tests.rs  capture_metadata_tests.rs  cli_e2e_tests.rs  cli_tests.rs  code_review_fixes_tests.rs  codex_request_parsing_tests.rs  d1_user_request_text_tests.rs  db_tests.rs  drift_detection_tests.rs  forward_compat_tests.rs  gap_fix_tests.rs  gap_fixes_phase2_tests.rs  gemini_audit_gap_tests.rs  gemini_cli_tests.rs  gemini_integration_tests.rs  graph_store_error_tests.rs  hash_tests.rs  intent_agent_tests.rs  intercept_tests.rs  m2_pg_ddl_removal_tests.rs  messages_delta_tests.rs  metadata_session_tests.rs  migration_tests.rs  negative_tests.rs  (+34 more)
gateway/tests/common/: mod.rs  pg_container.rs  pg_migrations.rs  pipeline.rs  s3_container.rs  sql_parse.rs
mcp/: package.json  tsconfig.json  vitest.config.ts
scripts/: version-check.mjs
shared/: placeholder-prefixes.json
tui/: Cargo.toml
tui/graphql/: agent_framework_distribution.graphql  agent_summary.graphql  audit_trail.graphql  daily_spend.graphql  gateway_status.graphql  realtime_feed.graphql  realtime_stats.graphql  schema.graphql  session_detail.graphql  sessions.graphql  spend_by_framework.graphql  spend_by_model.graphql  spend_by_provider.graphql  top_developers.graphql  top_repositories.graphql  turn.graphql  usage_summary.graphql
tui/src/: config.rs  error.rs  format.rs  lib.rs  main.rs  runtime.rs
tui/src/app/: history.rs  keymap.rs  lens.rs  lens_update.rs  mod.rs  selection.rs  state.rs  tabs.rs  time_window.rs
tui/src/gql/: client.rs  marshal.rs  mod.rs  queries.rs
tui/src/lenses/: agents.rs  audit.rs  cost.rs  help.rs  mod.rs  realtime.rs  session_detail.rs  sessions.rs  stub.rs  turn_detail.rs
tui/src/palette/: commands.rs  mod.rs  overlay.rs  parser.rs
tui/src/poll/: agents.rs  audit.rs  cost.rs  mod.rs  realtime.rs  session_detail.rs  sessions.rs  turn_detail.rs
tui/src/search/: fuzzy.rs
tui/src/ui/: draw.rs  mod.rs  theme.rs
tui/src/ui/widgets/: bar_chart.rs  metric_card.rs  mod.rs  modal.rs  sparkline.rs  status_pill.rs  table.rs
tui/tests/: agents_pipeline_tests.rs  app_state_tests.rs  audit_pipeline_tests.rs  cost_pipeline_tests.rs  draw_dispatch_tests.rs  drill_pipeline_tests.rs  format_tests.rs  fuzzy_tests.rs  gql_compile_tests.rs  history_stack_tests.rs  keybind_pipeline_tests.rs  keymap_dispatch_tests.rs  palette_parser_tests.rs  realtime_feed_pipeline_tests.rs  search_pipeline_tests.rs  selection_registry_tests.rs  sessions_pipeline_tests.rs  snapshot_agents_tests.rs  snapshot_cost_tests.rs  snapshot_palette_tests.rs  snapshot_realtime_tests.rs  snapshot_session_detail_tests.rs  snapshot_sessions_tests.rs  snapshot_stub_tests.rs  theme_style_tests.rs  time_window_tests.rs  window_pipeline_tests.rs
xtask/: Cargo.toml
(+363 files in other folders)
