[package]
name = "recondo-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recondo-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
graphql_client = { version = "0.14", features = ["reqwest-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[lints]
workspace = true
